[package]
name = "influxdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb2 = "0.1.0"
chrono = "0.4.19"
futures = { version = "0.3", default-features = false }

tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }